# Algorithmen_und_Datenstrukturen-Merge-Sort-und-Parallelisierung

./: CMakeLists.txt  Mergesort.cbp  README.md  Results.txt  main.cpp  plotresults.gnu
Results/: Diagramme (alle Funktionen).xlsx  p2merge (mit Parallelisierung).txt  p2merge (ohne Parallelisierung).txt  pmerge (mit Parallelisierung).txt  pmerge (ohne Parallelisierung).txt  simplemerge (mit Parallelisierung).txt  simplemerge (ohne Parallelisierung).txt
